# edm-store

./: .gitignore  LICENSE  Makefile  README.md  README_CN.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
docs/: base-example.md  basic-concept.md  quick-start.md
edm_store/: __init__.py  __main__.py  config.py  dataset.py
edm_store/dm/: __init__.py  metadata.py
edm_store/dm/db/: __init__.py
edm_store/dm/db/mongo/: __init__.py  _api_impl.py  _api_interface.py  _mongo_ops.py  _validation.py
edm_store/dm/meta/: __init__.py  _api_impl.py  _model.py
edm_store/dm/raster/: __init__.py  _band.py  _global_tile.py  _io.py  _pixel_area_band.py  _raster_band.py  _vrt_band.py
edm_store/dm/vector/: core.py
edm_store/scripts/: app.py  cli.py
edm_store/storage/: AbsClient.py  __init__.py
edm_store/storage/ceph_rgw/: __init__.py  _client.py  _path.py  awsauth.py
edm_store/storage/dummy/: _client.py
edm_store/storage/fs/: __init__.py  _client.py
edm_store/utils/: __init__.py  cache.py  constant.py  pixel_type.py  tools.py
tests/: __init__.py  conftest.py
tests/db/: test_mongo.py
tests/meta/: test_api.py
tests/raster/: test_band.py  test_global_tile.py  test_io.py  test_raster_band.py
tests/utils/: test_pixel_type.py  test_tools.py
